--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@ button:hover {
 footer {
     margin-top: 40px;
     padding: 20px;
-    background-color: #000000;
+    background-color: rgba(255, 255, 255, 0.1);
+
 
     
 }
